<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bgregister"
    android:layout_height="match_parent"
    tools:context="ikon.ikon.Activites.Register_Activity">

    <ProgressBar
        android:id="@+id/progressBarRegister"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#ff0000"
        android:layout_centerInParent="true"
        android:visibility="invisible" />
    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logoregister"
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/icon"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/icon"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/_20sdp"
        android:paddingLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"

        android:id="@+id/Relaone"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/editregister"
            android:hint="@string/FName"
            android:textColor="#000"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp"
            android:id="@+id/E_FirstName"
            android:textColorHint="#000"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/editregister"
            android:hint="@string/LName"
            android:textColor="#000"
            android:paddingLeft="@dimen/_20sdp"
            android:id="@+id/E_LastName"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@+id/E_FirstName"
            android:textColorHint="#000"
            android:paddingRight="@dimen/_20sdp"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/editregister"
            android:hint="@string/Email"
            android:textColor="#000"
            android:paddingLeft="@dimen/_20sdp"
            android:id="@+id/E_Emai"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColorHint="#000"
            android:paddingRight="@dimen/_20sdp"

            android:layout_below="@+id/E_LastName"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/editregister"
            android:hint="@string/Phone"
            android:textColor="#000"
            android:textColorHint="#000"
            android:paddingLeft="@dimen/_20sdp"
            android:id="@+id/E_Phone"
            android:paddingRight="@dimen/_20sdp"

            android:layout_below="@+id/E_Emai"
            android:layout_marginTop="@dimen/_10sdp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/editregister"
            android:hint="@string/Password"
            android:textColor="#000"
            android:paddingLeft="@dimen/_20sdp"
            android:id="@+id/E_Password"
            android:layout_below="@+id/E_Phone"
            android:textColorHint="#000"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingRight="@dimen/_20sdp"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/editregister"
            android:hint="@string/ConfirmPassword"
            android:textColor="#000"
            android:paddingLeft="@dimen/_20sdp"
            android:id="@+id/E_ConFirmPassword"
            android:layout_below="@+id/E_Password"
            android:textColorHint="#000"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingRight="@dimen/_20sdp"


            />



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Relaone"
        android:paddingRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingLeft="@dimen/_10sdp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/signup"
           android:text="@string/signup"
            android:textColor="#4b4b4b"
            android:id="@+id/Register"
            android:textSize="@dimen/_18sdp"
            />

    </RelativeLayout>

</RelativeLayout>
