<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglogin"
    tools:context="ikon.ikon.Activites.Maintincetwo">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:background="#00000000"
        android:layout_height="@dimen/_120sdp"/>



    <TextView
        android:layout_width="@dimen/_250sdp"
        android:background="@drawable/bcmaintaince"
        android:id="@+id/T_Price"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_150sdp"
        android:paddingRight="@dimen/_10sdp"
        android:textColor="#000"
        android:text="@string/price"
        android:paddingLeft="@dimen/_10sdp"
        android:layout_height="@dimen/_40sdp" />

    <EditText
        android:layout_width="@dimen/_250sdp"
        android:background="@drawable/bcmaintaince"
        android:id="@+id/T_Phone"
        android:layout_below="@+id/T_Price"
        android:gravity="center_vertical"
        android:hint="@string/Phone"
        android:textColorHint="#000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="#000"
        android:inputType="number"
       android:paddingRight="@dimen/_10sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:layout_height="@dimen/_40sdp" />


    <TextView
        android:layout_width="@dimen/_250sdp"
        android:background="@drawable/bcmaintaince"
        android:id="@+id/T_Address"
        android:layout_below="@+id/T_Phone"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:textColor="#000"
        android:paddingRight="@dimen/_10sdp"
        android:text="@string/address"
        android:paddingLeft="@dimen/_10sdp"
        android:layout_height="@dimen/_40sdp" />

    <Button
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/T_Address"
        android:background="#ffce20"
        android:id="@+id/getlocat"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/getlocation"
        android:textSize="@dimen/_15sdp"
        android:textColor="#000"
        />

    <Button
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/getlocat"
        android:background="#fffd38"
        android:id="@+id/servicerequest"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/servicerequest"
        android:textSize="@dimen/_15sdp"
        android:textAllCaps="false"
        android:textColor="#000"
        android:layout_marginBottom="@dimen/_10sdp"
        />
    <ProgressBar
        android:id="@+id/progressmaintenence"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
