<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglogin"
    tools:context="ikon.ikon.Activites.Login">
    <ProgressBar
        android:id="@+id/progressBarlogin"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />
    <ImageView
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/logo"
        android:layout_margin="@dimen/_15sdp"
        />
    <EditText
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/loginbtns"
        android:hint="@string/Email"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:gravity="center"

        android:id="@+id/Log_Email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_140sdp"
        />
    <EditText
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/loginbtns"
        android:hint="@string/Password"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/Log_Password"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Log_Email"
        android:layout_marginTop="@dimen/_15sdp"
        />
    <Button
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/signup"
        android:text="@string/signin"
        android:textColor="#4b4b4b"
        android:textSize="@dimen/_18sdp"
        android:layout_below="@+id/Log_Password"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_centerHorizontal="true"
        android:id="@+id/signin"
        />
    <RelativeLayout
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin"
        android:id="@+id/Relat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/facebook"
            android:id="@+id/loginfac"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/Or"
            android:textSize="@dimen/_20sdp"
            />
        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/google"
            android:id="@+id/google"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_below="@+id/Relat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Forget_password"
            android:id="@+id/Register"
            />

    </RelativeLayout>

</RelativeLayout>
